--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ margin-right: 2px;
 <div class="item"><a href="procesador importante.mp4"><img src="procesadores (2).png"width="90" height="76"></a></div>
 <div class="item"><a href="calor.mp4"><img src="calor.png"width="90" height="76"></a></div>
 <div class="item"><a href="mantenimiento.mp4"><img src="mantenimiento.png"width="90" height="76"></a></div>
-<div class="item"><a href="ordenador comprimido.mp4"><img src="compilacion.png"width="90" height="76"></a></div>
+<div class="item"><a href="https://drive.google.com/file/d/1DZVHdz6Wkw9GusxrTg-sdr-U7o6_lyQn/view"><img src="compilacion.png"width="90" height="76"></a></div>
 </div>
 
 
